manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
